--- a/eligibility-microservice/src/main/resources/application.yaml
+++ b/eligibility-microservice/src/main/resources/application.yaml
@@ -14,9 +14,9 @@ cloud:
   function:
     definition: gameCreatedBinding
   stream:
-    default-binder: kafka.default
+    default-binder: kafka_default
     bindings:
-      game-binding-in.0:
+      gameCreatedBinding-in-0:
         destination: event.game-created
         binder: kafka_default
         useNativeDecoding: true
