--- a/game-service/src/main/resources/application.yaml
+++ b/game-service/src/main/resources/application.yaml
@@ -13,7 +13,7 @@ jwt:
 
 cloud:
   function:
-    definition:
+    definition: gameCreatedBinding
   stream:
     default-binder: kafka_default
     bindings:
@@ -45,4 +45,4 @@ cloud:
                     minPartitionCount: 3
                     replicationFactor: 1
                     serdeError: logAndContinue
-                    broker: localhost:9092
+                    brokers: localhost:9092
